k8s/prod/matching-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: matching-service
  labels:
    app: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      containers:
      - name: matching-service
        image: pavithrasambath2003/matching-service:v1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          tcpSocket:
            port: 5003
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5003
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 5003
