k8s/prod/matching-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matching-service-route
  namespace: prod
spec:
  parentRefs:
  - name: medicojob-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /match
    backendRefs:
    - name: matching-service
      port: 5003
